added code samples for Semicolons and Integers

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </div>
     <div id="Semicolons" class="main-div">
       <header>Semicolons</header>
-      <p>Unlike many other languages, Swift doesn’t require you to write a semicolon (;) after each statement in your code, although you can do so if you wish. However, semicolons are required if you want to write multiple separate statements on a single line.</p>
+      <p>Unlike many other languages, Swift doesn’t require you to write a semicolon (;) after each statement in your code, although you can do so if you wish. However, semicolons are required if you want to write multiple separate statements on a single line:<br><br><code>let cat = "🐱"; print(cat)<br>// Prints "🐱"</code>
+    <br><br></p>
     </div>
     <div id="Integers" class="main-div">
       <header>Integers</header>
@@ -142,6 +143,12 @@
           A hexadecimal number, with a 0x prefix
         </li>
       </ul>
+      <p>All of these integer literals have a decimal value of 17:</p>
+      <code>let decimalInteger = 17<br>
+        let binaryInteger = 0b10001       // 17 in binary notation<br>
+        let octalInteger = 0o21           // 17 in octal notation<br>
+        let hexadecimalInteger = 0x11     // 17 in hexadecimal notation<br>
+      </code>
     </div>
     <div id="Numeric_Type_Conversion" class="main-div">
       <header>Numeric Type Conversion</header>
